# robo-train

./: .gitignore  README.md  README_zh.md  adapt.md  pyproject.toml
configs/: demo.yaml  experiment_demo.json  policy3d_demo.json  vla_demo.json  world_model_demo.json
configs/datasets/: README.md
docs/: architecture.md  framework_mapping.md
scripts/train/: train_arrange_flowers.sh  train_arrange_flowers_sparse.sh  train_arrange_flowers_table30v2.sh  train_put_the_books_back_table30v2_joint_delta.sh
src/: __init__.py
src/config/: __init__.py
src/robo_train/: __init__.py
src/schema/: __init__.py  action_semantics.py  episode.py  experiment_config.py  frame_graph.py
src/scripts/: __init__.py  generate_demo_data.py  kai0_train.py  run_local_demo.py
src/training/: __init__.py  algorithm_registry.py  kai0_launcher.py  kai0_profiles.py  loss_registry.py  sampler.py  trainer.py
tests/: README.md  test_data_infra.py  test_data_views_and_losses.py  test_kai0_train_compat.py  test_processor_pipeline.py  test_project_structure.py  test_schema_serialization.py  test_synthetic_adapter.py  test_training_architecture_extensions.py  test_training_family_profiles.py  test_validators.py
tests/shared/: test_data_infra.py  test_data_views_and_losses.py  test_processor_pipeline.py  test_project_structure.py  test_schema_serialization.py  test_synthetic_adapter.py  test_training_family_profiles.py  test_validators.py
tools_charles/train/: train_arrange_flowers_encode.sh  train_put_the_books_back_table30v2.sh  train_put_the_books_back_table30v2_joint.sh  train_pytorch.sh
(+153 files in other folders)
